--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1> This is a title</h1>
 
-    {% for post in posts%}
-    <h2>{{post.title}}</h2>
-    <p>{{post.body}}</p>
-    {% endfor %}
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
 
-</body>
+    <body>
+        
+        {% if title %}
+        <h1>{{title}}</h1>
+        {% endif %}
+
+        {% for post in posts %}
+
+            {% if post.title == "lorem ipsum" %}
+            <h2>This is a title</h2>
+            {% endif %}
+
+            <h2>{{post.title}}</h2>
+            <p>{{post.body}}</p>
+
+        {% endfor %}
+
+        {% if page.ending %}
+        <h2>{{page.ending}}</h2>
+        {% endif %}
+
+    </body>
+
 </html>
