parser is working!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
-    
+
     <body>
         
         {% if title %}
@@ -29,6 +29,10 @@
         {% if ending %}
         <h2>{{ending}}</h2>
         {% endif %}
+
+        <p>Hello world
+            <span>Hello</span>
+        </p>
 
         <footer>
             Copyright
