added templating language to evaluate expressions

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <h1>{{title}}</h1>
-        {% if title == 'Hello World'%}
+        {% if title !!! True %}
             <p>Hello world</p>
         {%endif%}
-        
+
         <p>My first paragraph.</p>
     </body>
 
