added language to evaluate expression

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>{{title}}</h1>
-        {% if title !!! True %}
+        {% if 1 + 1 == 2 AND 2 + 2 == 3 %}
             <p>Hello world</p>
         {%endif%}
 
