--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>{{title}}</h1>
-        {% if 1 + 1 == 2 AND 2 + 2 == 3 %}
-            <p>Hello world</p>
-        {%endif%}
+        <h1>{{name}}</h1>
+        <div>
+            <h2></h2>
+            <div>
+                <p></p>
+            </div>
+            <h2></h2>
+        </div>
 
-        <p>My first paragraph.</p>
     </body>
 
 </html>
+
 
