--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>{{name}}</h1>
-        <div>
-            <h2></h2>
-            <div>
-                <p></p>
-            </div>
-            <h2></h2>
-        </div>
+
+        {% if 19 == test.age %}
+        <h1>{{ test.name }}</h1>
+        {% endif %}
+
+        {% for post in posts%}
+        <h2>{{post.title}}</h2>
+        {% endfor %}
+
 
     </body>
+
 
 </html>
 
